# akasha

./: .gitignore  .gitlab-ci.yml  .rancher-pipeline.yml  DEVELOPMENT.md  Dockerfile  Dockerfile-kubernetes  Dockerfile.builder  Dockerfile.llama-cpp-ui  Dockerfile.ui  License  QAIII.py  README.md  THIRD_PARTY.md  THIRED_PARTY.md  accounts.yaml  api.py  api_utils.py  config.py  example.py  helper.py  index.html  install.env  install.sh  main.py  obj_test.py  pyproject.toml  pytest.ini  readme.md  readmeTW.md  requirements-light.txt  requirements.txt  search.py  setup.py  start.sh  streamlit_utils.py  tests.md  tt.json  ui.py  upgrade.md  upgrade_light_version.md  (+1 more)
.github/workflows/: ci.yml  publish.yml
akasha/: __init__.py  agents.py  akasha.py  akashas.py  api.py  constants.py  db.py  eval.py  format.py  helper.py  prompts.py  search.py  self_query.py  summary.py  ui.py
akasha/RAG/: __init__.py  ask.py  base.py  memory.py  rag.py  self_ask.py
akasha/agent/: __init__.py  agent_tools.py  agents.py  base.py
akasha/eval/: __init__.py  base.py  eval.py  evaluation.py  model_eval.py  scores.py
akasha/helper/: __init__.py  base.py  crawler.py  encoding.py  handle_objects.py  memory.py  preprocess_prompts.py  run_llm.py  scores.py  self_query_filter.py  token_counter.py  web_engine.py
akasha/interface/: cot_page.py  res_page.py  setting.py  sum_page.py  upload_file.py  webpage.py
akasha/models/: anthro.py  chglm.py  custom.py  gemi.py  gtq.py  hf.py  llama2.py  opi.py
akasha/summary/: summary.py
akasha/tools/: ask.py  gen_img.py  summary.py  websearch.py
akasha/utils/: __init__.py  atman.py  base.py  logging_config.py  upload.py
akasha/utils/db/: __init__.py  create_db.py  db_structure.py  delete_db.py  extract_db.py  file_loader.py  load_db.py  load_docs.py  upadte_db.py
akasha/utils/models/: anthro.py  azure_openai.py  chglm.py  custom.py  gemi.py  gtq.py  hf.py  llamacpp2.py  remo.py
akasha/utils/prompts/: format.py  gen_prompt.py
akasha/utils/search/: auto_search.py  search_doc.py
akasha/utils/search/retrievers/: base.py  retri_bm25.py  retri_custom.py  retri_faiss.py  retri_knn.py  retri_mmr.py  retri_rerank.py  retri_svm.py  retri_tfidf.py
app/: index.php
cli/: glue.py
config/datasets/: ex-dataset.json
config/experts/: ex-expert.json
docs/stability_test/: hello memory.md  個人偏好.md  個人背景.md  個人資料.md  個人資訊.md  地點資訊.md  居住地.md  居住地資訊.md  食物偏好.md  食物喜好.md
examples/: ex_agent.py  ex_api.py  ex_ask.py  ex_eval.py  ex_generate_img.py  ex_long_term_memory.py  ex_rag.py  ex_selfask_rag.py  ex_summary.py  ex_websearch.py
examples/helper/: ex_handle_obj.py  ex_load_db.py  ex_remove_db.py  ex_retriver.py  ex_scores.py  ex_self_query.py  ex_token_count.py
iiidevops/: app.blacklist  app.env  app.env.develop  pipeline_settings.json
iiidevops/jobs/: pytest.yml
iiidevops/postman/: postman_collection.json  postman_environment.json
iiidevops/sideex/: Global Variables.json  sideex.json
iiidevops/sonarqube/: SonarScan
interface/: cot_page.py  res_page.py  setting.py  sum_page.py  upload_file.py
kubernetes/: deployment.yml  hpa.yml  ingress.yml  pvc.yml  service.yml
routers/: __init__.py  datasets.py  experts.py  watchdefault.py
tests/: conftest.py  test_agent.py  test_agents_final_action_integration.py  test_agents_observation_normalization.py  test_akasha.py  test_api_stability.py  test_db.py  test_eval.py  test_logging_behavior.py  test_mcp_upgrade.py  test_retrievers.py  test_run_llm.py  test_summary.py
tests/test_upgrade/: README.md  mcp_client_example.py  mcp_math_server.py
tests/tests_data/docs/: simple_case.json  第一階段銷售模組AI問答軟體驗收內容文件.docx
tests/upgrade_tests/: conftest.py  test_anthropic_rag.py  test_gemini_rag.py  test_light_restrictions.py  test_openai_rag.py
upgrade_tests/: conftest.py  test_anthropic_rag.py  test_gemini_rag.py  test_light_restrictions.py  test_openai_rag.py
views/: consult.py  dataset.py  experts.py  forgetpwd.py  settings.py  signup.py  userguide.py
