[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha_light"
version = "0.1.1"
description = "document QA(RAG) package(light weight version) using langchain and chromadb"
readme = "README.md"
authors = [{ name = "chih chuan chang", email = "tea9296@gmail.com" }]
requires-python = ">=3.10,<3.13"

# 核心相依（環境標記照你原本的平台分流）
dependencies = [
  "pypdf",
  "langchain-core>=0.3,<0.4",
  "langchain>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain_openai>=0.1.0",
  "langchain-huggingface>=0.1.2",
  "langchain-chroma==0.2.2",
  "monotonic",
  "chromadb==0.4.14",
  "onnxruntime<=1.20.0",
  "openai>=1.78.1",
  "tiktoken",
  "scikit-learn>=1.3.0",
  "jieba>=0.42.1",
  "opencc-python-reimplemented==0.1.7",
  "tqdm>=4.65.0",
  "docx2txt==0.8",
  "rouge==1.0.1",
  "rouge-chinese==1.0.3",
  "click",
  "tokenizers>=0.19.1",
  "streamlit>=1.33.0",
  "streamlit_option_menu>=0.3.6",
  "rank_bm25",
  "unstructured",
  "python-pptx",
  "wikipedia",
  "numpy<2",
  "sentencepiece",
  "google-genai>=1.15.0",
  "anthropic",
  "tavily-python",
  "faiss-cpu",
  "langchain-mcp-adapters>=0.1.1",
  "mlflow",
  "json_repair",


]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
akasha = "cli.glue:akasha"

[project.urls]
Homepage = "https://github.com/iii-org/akasha"


[tool.setuptools.packages.find]
include = ["akasha", "akasha.*", "cli"]