[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha_light"
version = "0.1.2"
description = "document QA(RAG) package(light weight version) using langchain and chromadb"
readme = "README.md"
authors = [{ name = "chih chuan chang", email = "tea9296@gmail.com" }]
requires-python = ">=3.10,<3.13"

# 核心相依（環境標記照你原本的平台分流）
dependencies = [
  "pypdf",
  "langchain-core>=1.0,<2.0",
  "langchain>=1.0,<2.0",
  "langchain-community>=0.4.1,<0.5",
  "langchain-classic>=1.0,<2.0",
  "langchain_openai>=1.0,<2.0",
  "langchain-text-splitters>=1.1,<2.0",
  "langchain-chroma>=1.1,<2.0",
  "monotonic",
  "chromadb>=1.3.5",
  "openai>=1.78.1",
  "tiktoken",
  "scikit-learn>=1.3.0",
  "jieba3>=1.0.2",
  "opencc-python-reimplemented==0.1.7",
  "tqdm>=4.65.0",
  "docx2txt==0.8",
  "rouge==1.0.1",
  "rouge-chinese==1.0.3",
  "click",
  "streamlit>=1.33.0",
  "streamlit_option_menu>=0.3.6",
  "rank_bm25",
  "unstructured",
  "python-pptx",
  "wikipedia",
  "numpy<2",
  "google-genai>=1.15.0",
  "anthropic",
  "tavily-python",
  "faiss-cpu",
  "langchain-mcp-adapters>=0.2,<0.3",
  "mlflow",
  "json_repair",


]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "python-dotenv"]

[project.scripts]
akasha = "cli.glue:akasha"

[project.urls]
Homepage = "https://github.com/iii-org/akasha"


[tool.setuptools.packages.find]
include = ["akasha", "akasha.*", "cli"]
